[fix]: Overflow logic

--- a/src/Components/style/MainClubs.scss
+++ b/src/Components/style/MainClubs.scss
@@ -3,12 +3,18 @@
   flex-wrap: wrap;
   width: 80%;
   justify-content: center;
-  height: auto;
-  overflow: hidden;
+  height: 100%;
+  overflow-y: none;
+  align-content: flex-start;
+  :hover {
+    transition: all 0.2s ease-out;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    top: -4px;
+  }
 }
 .club {
   display: flex;
-  flex-wrap: flex;
+  flex-wrap: wrap;
   border: 1px solid #dadada;
   margin: 0.5rem 0.5rem;
   padding: 0.5rem 0.5rem;
@@ -16,6 +22,10 @@
   width: 40%;
   height: 120px;
   justify-content: space-between;
+  :hover {
+    top: 0px;
+    box-shadow: none;
+  }
 }
 .clubText {
   display: flex;
@@ -47,12 +57,12 @@
     margin-bottom: 5px;
   }
   .deadline {
-    width: 60%;
+    width: 70px;
     padding: 0.3rem;
     background-color: #dadada;
     border-radius: 12px;
     text-align: center;
-    // height: 20px;
+    height: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
